--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-/bin/
-/edu/
-/Box.class
-/Box2.class
-/Hello.class
-/Hello.java
-/Hello$1.class
-/Hello$Box.class
-/Hello$Em.class
-/Hello$InnerClass.class
-/Hello2.class
-/Hello2.java
-/Hello2$1.class
-/Hello2$2.class
-/Hello2$Em.class
-/Hello2$InnerClass.class
-/OuterClass.class
+*.class
